--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 			<div class="box box--sm">
 				<h1 class="section__hero-title">Fresh Life</h1>
 				<p class="section__text">Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
-				<button class="btn btn--red">GET FREE NOW</button>
+				<a href="#" class="btn btn--red">GET FREE NOW</a>
 			</div>
 			<a href="#about" class="scroll">
 				<svg width="24" height="40">
@@ -123,7 +123,7 @@
 					</div>
 				</div>
 			</div>
-			<button class="btn btn--blue">VIEW MORE</button>
+			<a href="#" class="btn btn--blue">VIEW MORE</a>
 		</div>
 	</section>
 
@@ -183,7 +183,7 @@
 				</a>
 				
 			</div>
-			<button class="btn btn--pink">VIEW MORE</button>
+			<a href="#" class="btn btn--pink">VIEW MORE</a>
 		</div>
 	</section>
 
